--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@riophae/vue-treeselect": "0.4.0",
+    "@tinymce/tinymce-vue": "^3.2.8",
     "axios": "0.18.1",
     "clipboard": "2.0.4",
     "echarts": "^4.2.1",
@@ -55,6 +56,7 @@
     "path-to-regexp": "2.4.0",
     "screenfull": "4.2.0",
     "sortablejs": "1.8.4",
+    "tinymce": "^5.7.0",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
     "vue-cropper": "0.4.9",
