--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "vue-cropper": "0.4.9",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-quill-editor": "3.0.6",
+    "vue-resource": "^1.5.2",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
