--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "screenfull": "4.2.0",
     "sortablejs": "1.8.4",
     "tinymce": "^5.7.0",
+    "view-design": "^4.5.0",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
     "vue-cropper": "0.4.9",
